# ambr

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: build-darwin.sh  build-release-tarballs.sh  build-windows.sh
src/: db.rs  lib.rs  main.rs  recorder.rs
tests/: tests.rs
