[package]
name = "ambr"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
crossterm = "0.29.0"
dirs = "5.0"
humansize = "2.1.3"
ratatui = "0.30.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
sysinfo = "0.38.2"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
